--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,12 +1,15 @@
 body {
-background: #ffffff;
+background: #bebebe;
 text-align:center;
 }
-
+header {
+	font-size: 50pt;
+	font-weight: bold;
+}
 h1 {
 text-align: center;
 font-family:"Times New Romans";
-font: 30pt;
+font: 100pt;
 color: #ff3819;
 }
 hr {
@@ -21,11 +24,16 @@ text-indent: 48pt;
 color: #2f2d2d;
 }
 .form {
-	background-color: olive;
 	width: 500px;
 	text-align: center;
 	margin: auto;
 }
 .Top {
 height: 100px;
+}
+label {
+	font-size: 20pt;
+}
+p {
+	font-size: 15pt;
 }
