--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1,31 +1,37 @@
 body {
-background: #ffffff;
-text-align:center;
+	background: #ffffff;
+	text-align:center;
 }
 
 h1 {
-text-align: center;
-font-family:"Times New Romans";
-font: 30pt;
-color: #ff3819;
+  text-align: center;
+  font-family:"Times New Romans";
+  font: 30pt;
+  color: #ff3819;
 }
+
 hr {
-height: 2px;
-color: #ff3819;
+  height: 2px;
+  color: #ff3819;
 }
+
 p {
-font-family:"Calibri";
-font-size: 12pt;
-text-align: center;
-text-indent: 48pt;
-color: #2f2d2d;
+  font-family:"Calibri";
+  font-size: 12pt;
+  text-align: center;
+  text-indent: 48pt;
+  color: #2f2d2d;
 }
+
 .form {
 	background-color: olive;
 	width: 500px;
 	text-align: center;
 	margin: auto;
 }
-.Top {
-height: 100px;
+
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
